--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,21 @@
   "extends": "@vue/tsconfig/tsconfig.web.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "compilerOptions": {
-    "preserveValueImports": false,
-    "importsNotUsedAsValues": "remove",
+    "target": "ESNext",
+    "module": "ESNext",
+
+    // 👇 WAJIB untuk @tailwindcss/vite (.mts modules)
+    "moduleResolution": "bundler",
+
+    "noEmit": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+
+    // 👇 pengganti resmi importsNotUsedAsValues/preserveValueImports
     "verbatimModuleSyntax": true,
+
+    "types": ["vite/client"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
