--- a/tsconfig.vite-config.json
+++ b/tsconfig.vite-config.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "composite": true,
     "allowJs": true,
-    "types": ["node"]
+    "moduleResolution": "bundler",
+    "types": ["vite/client"]
   }
 }
